<resources>
    <string name="app_name">EnChat</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="loginLogo">loginLogo</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="loginContinue">Continue</string>
    <string name="otpLogo">OTPLogo</string>
    <string name="enter_the_verification_code">Enter the verification code</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="profile_info">Profile Info</string>
    <string name="please_provide_your_name_and_optional_profile_photo">Please provide your name and optional profile photo</string>
    <string name="type_your_name_here">Type your name here</string>
    <string name="finished">Finished</string>
    <string name="otpview">otpView</string>
    <string name="profilepic">profilePic</string>
</resources>