<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada"
        android:gravity="center_horizontal"
        android:text="@string/profile_info"
        android:textAlignment="center"
        android:id="@+id/tvProfileTitle"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvProfileInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvProfileTitle"
        android:layout_marginTop="20dp"
        android:text="@string/please_provide_your_name_and_optional_profile_photo"
        android:textAlignment="center"
        android:textSize="16sp"
        android:gravity="center_horizontal" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfilePhoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/tvProfileInstruction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:src="@drawable/avatar"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivProfilePhoto"
        android:padding="16sp"
        android:hint="@string/type_your_name_here"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:id="@+id/etName"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/teal_200"
        android:id="@+id/btnProfileNext"
        android:text="@string/finished"/>
</RelativeLayout>