<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerInParent="true"

    android:padding="10dp">
    <ProgressBar
        android:id="@+id/pbLogin"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/loginLogo"
        android:src="@mipmap/ic_login_2_foreground"
        android:id = "@+id/iv_loginIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_loginIcon"
        android:layout_marginTop="20dp"
        android:autofillHints="phone"
        android:id="@+id/etPhnNum"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"
        android:padding="20dp"
        android:textSize="16sp"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/loginContinue"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        android:layout_below="@+id/etPhnNum"
        android:id="@+id/btnLoginContinue"/>

</RelativeLayout>